# kudo

./: .gitignore  .nvmrc  1  CONTRIBUTING.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json  vitest.config.ts
.github/: CODEOWNERS  auto_assign.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-zip.yml  deploy-web.yml  e2e.yml  lint.yml
.husky/: pre-commit
apps/backend/: Cargo.toml
apps/backend/src/: config.rs  lib.rs  main.rs
apps/backend/src/graphql/: auth.rs  errors.rs  mod.rs  threads.rs  types.rs  users.rs
apps/e2e/: package.json  playwright.config.ts  tsconfig.json
apps/e2e/fixtures/: chrome-extension.ts
apps/toolbar/: package.json  tailwind.config.ts  tsconfig.json  vite.config.mts
apps/toolbar/src/: App.tsx  index.tsx  providers.tsx  tailwind-input.css
apps/web/: CHANGELOG.md  README.md  components.json  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/.next/: trace  transform.js
apps/web/messages/: en.json
apps/web/src/: middleware.ts
chrome-extension/: README.md  manifest.js  package.json
chrome-extension/src/background/: action.ts  connect.ts  index.ts  interface.ts  session.ts  supabase.ts
pages/content-ui/: package.json
pages/popup/: package.json
scripts/: update-supabase-types.sh
supabase/: LEGACY.md  config.toml  database.types.ts
supabase/migrations/: 20250331135452_remote_schema.sql
tests/e2e/: package.json  tsconfig.json
(+504 files in other folders)
