[package]
name = "kudo-backend"
version = "0.0.1"
edition = "2021"
rust-version = "1.83"


[dependencies]

# core
axum = "0.8.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "json", "uuid", "chrono", "macros" ] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower = "0.5.2"
async-graphql = "7.0.11"
async-graphql-axum = "7.0.16"

# util
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenv = "0.15.0"
